2007-01-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIGMPCdromCollection.idl:
	* browser-plugin/idl/totemIGMPClosedCaption.idl:
	* browser-plugin/idl/totemIGMPDVD.idl:
	* browser-plugin/idl/totemIGMPError.idl:
	* browser-plugin/idl/totemIGMPErrorItem.idl:
	* browser-plugin/idl/totemIGMPMedia.idl:
	* browser-plugin/idl/totemIGMPMediaCollection.idl:
	* browser-plugin/idl/totemIGMPNetwork.idl:
	* browser-plugin/idl/totemIGMPPlayerApplication.idl:
	* browser-plugin/idl/totemIGMPPlaylist.idl:
	* browser-plugin/idl/totemIGMPPlaylistArray.idl:
	* browser-plugin/idl/totemIGMPPlaylistCollection.idl:
	* browser-plugin/idl/totemIGMPSettings.idl:
	* browser-plugin/totemGMPError.cpp:
	* browser-plugin/totemGMPPlaylist.cpp:
	* browser-plugin/totemGMPSettings.cpp: Add the missing files, duh

2007-01-31  Wim Taymans,,,  <wim@fluendo.com>

	* configure.in:
	Also link against base libs.

2007-01-31  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(get_visualization_size): avoid getting criticals when we're not
	in video playback mode, and we check for the vis. qualities,
	spotted by <did447@gmail.com> (Closes: #402847)

2007-01-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/idl/Makefile.am:
	* browser-plugin/idl/totemIBasicPlayer.idl:
	* browser-plugin/idl/totemIGMPControls.idl:
	* browser-plugin/idl/totemIGMPPlayer.idl:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemGMPPlugin.h: Add Javascript stubs for the GMP
	(Windows Media Player-compatible) plugin

2007-01-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (create_lang_actions):
	  Don't let hash table take ownership of and free strings that it
	  doesn't own (causes crashes in totem_sublang_update() when accessing
	  already freed memory or trying to free it again); also fix up hash
	  table usage so that it really detects equal language strings.
	  (Closes: #402512)
