@@ -1,5 +1,12 @@
 2007-01-31  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemGMPError.h:
+	* browser-plugin/totemGMPPlaylist.h:
+	* browser-plugin/totemGMPSettings.h: and more missing files,
+	I need to stop the crack
+
+2007-01-31  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/idl/totemIGMPCdromCollection.idl:
 	* browser-plugin/idl/totemIGMPClosedCaption.idl:
 	* browser-plugin/idl/totemIGMPDVD.idl:
